<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#5780FA"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="@string/continue_button"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />


</androidx.constraintlayout.widget.ConstraintLayout>